--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<form class="infoForm">
+<form id="infoForm">
     <input type="text" id="inputNum">
-    <button type="submit" id="draw">Draw</button>
+    <input type="submit" id="draw" value="Draw" name="draw">
 </form>
 <div id="continer"></div>
 <script src="js/script.js"></script>
