--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <form id="infoForm">
     <input type="text" id="inputNum">
     <input type="submit" id="draw" value="Draw" name="draw">
+    <input type="button" id="coloring" value="Coloring">
 </form>
 <div id="continer"></div>
 <script src="js/script.js"></script>
